# usv_workspace

./: .gitignore  ANALYSIS_INDEX.md  ARCHITECTURE_DIAGRAM.md  CLUSTER_TIMEOUT_MECHANISM.md  DOMAIN_BRIDGE_SUCCESS.md  IMPROVEMENT_RECOMMENDATIONS.md  LOW_BATTERY_MODE_TEST_REPORT.md  PROJECT_ANALYSIS.md  QUICK_START_GUIDE.md  README.md  analyze_oscillation.py  check_fcu_version.sh  check_system_id.sh  deploy_to_usv.sh  diagnose_usv_online_status.sh  fastdds_gs.xml  fastdds_usv.xml  params_900.param  rebuild_nav_server.sh  start_ground_station.sh  test_fleet_launcher_status.sh  test_low_battery_mode.sh  test_status_detection.py  verify_domain_bridge_final.sh  verify_param_upgrade.sh  分析总结.md
src/common_interfaces/: CMakeLists.txt  package.xml
src/common_interfaces/action/: NavigateToPoint.action
src/common_interfaces/msg/: AttitudeCommand.msg  ClusterStatus.msg  FleetNeighborPoses.msg  FormationConfig.msg  MpcDebug.msg  NavigationAck.msg  NavigationFeedback.msg  NavigationGoal.msg  NavigationResult.msg  NeighborPose.msg  UsvSetPoint.msg  UsvStatus.msg
src/common_interfaces/srv/: ShutdownControl.srv
src/common_utils/: package.xml  setup.cfg  setup.py
src/common_utils/common_utils/: __init__.py  geo_utils.py  param_loader.py  process_tracker.py  serial_manager.py  thread_safety.py
src/gs_gui/: AREA_OFFSET_GUIDE.md  ARM_COMMAND_AND_READY_CHECK_FIX.md  BOOT_POSE_EXPLAINED.md  BOOT_POSE_MIGRATION.md  BOOT_POSE_REMOVAL_SUMMARY.md  BUGFIX_STEERING_BUTTON.md  DOUBLE_GUI_FIX.md  EMOJI_FONT_SETUP.md  FLEET_LAUNCHER_OPTIMIZATION.md  FLEET_LAUNCHER_OPTIMIZATION_SUMMARY.md  FLEET_LAUNCHER_STATUS_FIX.md  GPS_STATUS_COLOR_FIX.md  GRACEFUL_SHUTDOWN.md  GRACEFUL_SHUTDOWN_IMPLEMENTATION.md  GRACEFUL_SHUTDOWN_QUICK_REF.md  GUI_MENU_LAUNCH_FIX.md  INTEGRATION_COMPLETE.md  LED_INFECTION_IMPLEMENTATION_SUMMARY.md  LED_INFECTION_MODE.md  LED_INFECTION_QUICK_START.md  MODULE_ARCHITECTURE.md  OFFLINE_DETECTION_OPTIMIZATION.md  OFFLINE_USV_FILTER.md  PARAM_BUTTON_FIX.md  PARAM_DEMO_SCRIPT.md  PARAM_LOADING_ISSUE.md  PARAM_MANAGER_DESIGN.md  PARAM_MANAGER_GUIDE.md  PARAM_MANAGER_SUMMARY.md  PARAM_PHASE2_SUMMARY.md  PARAM_PHASE3.1_SUMMARY.md  PARAM_PHASE3.2_SUMMARY.md  PARAM_PHASE3_SUMMARY.md  PARAM_QGC_QUICK_START.md  PARAM_QGC_UPGRADE_GUIDE.md  PARAM_QUICK_REF.md  PARAM_SERIAL_MODE_GUIDE.md  PARAM_SERVICE_TROUBLESHOOTING.md  PARAM_UI_IMPROVEMENT.md  PARAM_USAGE_GUIDE.md  (+32 more)
src/gs_gui/gs_gui/: __init__.py  angle_utils.py  apf_neighbor_relay_node.py  area_offset_dialog.py  cluster_controller.py  cluster_manager_node.py  cluster_task_manager.py  command_processor.py  compass_widget.py  discovery_handler.py  error_handler.py  event_decoder.py  formation_controller.py  formation_dialog.py  geofence_dialog.py  geofence_manager.py  ground_station_node.py  gui_logger.py  info_panel_styles.py  info_panel_widgets.py  led_infection.py  location_db.py  logger_config.py  main_gui_app.py  mission_queue_manager.py  mission_queue_widget.py  nav_settings_dialog.py  navigation_handler.py  param_compare.py  param_connection_dialog.py  param_import_export.py  param_item_delegate.py  param_manager.py  param_manager_px4.py  param_metadata.py  param_monitor.py  param_search.py  param_serial_manager.py  param_validator.py  param_window.py  (+24 more)
src/gs_gui/resource/: AX-2-20260123001.xml  AX-5m-001.xml  AX-5m-20260123001.xml  Line-1-2-3-End-blue.xml  Line-1-2-3.xml  TEST-2D-5m-001.xml  TEST-2D-5m-20260123001.xml  TEST-2D-5m-V-120-20260123001.xml  TEST-2D-5m-V-120.xml  TEST-2D-5m-V-135-20260123001.xml  TEST-2D-5m-V-135.xml  TEST-2D-5m-V-45-20260123001.xml  TEST-2D-5m-V-45.xml  TEST-2D-5m-V-60.xml  TEST-2D-5m-V-90-20260123001.xml  TEST-2D-5m-V-90.xml  TEST-LX-15m.xml  TEST-Y-F-20m-20260123001.xml  circle_patrol_and_stop.xml  cluster20260112001.xml  cluster20260112002.xml  cluster20260115001.xml  cluster20260115002.xml  cluster_task_xml_spec.md  gs_gui  gs_ui.ui  gs_ui.ui.backup  gs_ui.ui~RF1b63ea99.TMP  home.xml  light_style.qss  modern_style.qss  param_metadata.json  pathtest1.xml  triangle.xml  ui.py
src/gs_gui/scripts/: demo_param_qgc_features.py  demo_phase3.1_features.py  demo_phase3.2_features.py  demo_phase3.3-3.5_features.py  demo_usv_info_panel.py  download_ardupilot_metadata.py  integrate_usv_info_panel.py  param_diagnostic.py  quick_demo.sh  test_graceful_shutdown.sh  test_param_serial_mode.py
src/gs_gui/test/: test_area_offset_dialog.py  test_coordinate_transform.py  test_demo.py  test_geofence_dialog.py  test_info_panel_styles.py  test_info_panel_widgets.py  test_led_infection_mode.py  test_param_manager_phase2.py  test_temperature_hysteresis.py  test_usv_functions.py  test_usv_info_panel.py
src/usv_bringup/: BAUDRATE_CONFIGURATION_GUIDE.md  CMakeLists.txt  MAVROS_STARTUP_OPTIMIZATION.md  package.xml  setup.cfg  setup.py
src/usv_bringup/config/: chrony_usv.conf  gs_params.yaml  usv_params.yaml  usv_params_sitl.yaml  usv_station_params.yaml  zenoh_usv_config.json5
src/usv_bringup/launch/: usv_launch.py  usv_px4_dds_launch.py
src/usv_bringup/scripts/: check_network.sh  deploy_cluster.sh  setup_usv_id.sh  test_usv_domain.sh  verify_cross_domain.sh
src/usv_comm/: BATTERY_PERCENTAGE_FIX.md  COMPASS_HEADING_FIX.md  LOW_BATTERY_PERCENTAGE_FIX.md  STARTUP_LOW_BATTERY_FALSE_TRIGGER_FIX.md  package.xml  setup.cfg  setup.py  test_wgs84_conversion.py
src/usv_comm/config/: px4_events.json
src/usv_comm/scripts/: test_battery_calculation.py  test_failsafe_flags.py  test_low_battery_trigger.py
src/usv_comm/test/: test_pep257.py
src/usv_comm/usv_comm/: auto_set_home_node.py  auto_set_home_px4_node.py  gps_to_local_node.py  (+7 more)
src/usv_control/: ARCHITECTURE_REFACTORING.md  COORDINATE_ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  TEST_GLOBAL_FRAME.md  package.xml  setup.py  test_global_frame.sh
src/usv_drivers/: package.xml  setup.cfg  setup.py
src/usv_fan/: package.xml  setup.cfg  setup.py
src/usv_led/: package.xml  setup.cfg  setup.py
src/usv_sound/: LOW_BATTERY_SOUND_FIX.md  package.xml  setup.cfg  setup.py
src/usv_station/: package.xml  setup.cfg  setup.py
src/usv_tf/: package.xml  setup.cfg  setup.py
(+205 files in other folders)
