<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>common_interfaces</name>
  <version>0.0.0</version>
  <description>该包为USV（无人船）项目提供通用消息、服务和动作接口的定义，便于各功能模块间的标准化通信和集成。
This package defines common message, service, and action interfaces for the USV (Unmanned Surface Vehicle) project, enabling standardized communication and integration between functional modules.</description>
  <maintainer email="chenhangwei77777@hotmail.com">chenhangwei</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
