<?xml version="1.0"?>
<!--
  Copyright (c) 2026 chenhangwei
  
  This file is part of the USV Workspace project.
  
  ROS 2 package configuration for src.
  
  Author: chenhangwei
  Date: 2026-01-26
-->
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>common_utils</name>
  <version>1.0.0</version>
  <description>Common utility classes for USV project (parameter loading, resource management, thread safety)</description>
  <maintainer email="chenhangwei@example.com">Chen Hangwei</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
