<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>usv_bringup</name>
  <version>0.0.0</version>
  <description>
    ROS 2 launch package for USV onboard system management.
    This package provides bringup and integrated launch management for USV 
    (Unmanned Surface Vehicle) systems, including unified launch scripts and 
    configurations for multi-node/multi-module deployment, enabling fast 
    deployment and debugging for single or multiple USVs.
  </description>
  
  <maintainer email="chenhangwei77777@hotmail.com">Chen Hangwei</maintainer>
  <license>Apache-2.0</license>
  
  <url type="website">https://github.com/chenhangwei/usv_workspace</url>
  <url type="repository">https://github.com/chenhangwei/usv_workspace</url>
  <url type="bugtracker">https://github.com/chenhangwei/usv_workspace/issues</url>
  
  <author email="chenhangwei77777@hotmail.com">Chen Hangwei</author>
  
  <buildtool_depend>ament_python</buildtool_depend>
  
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>px4_msgs</exec_depend>
  <exec_depend>common_interfaces</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>