<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>usv_comm</name>
  <version>0.0.0</version>
  <description>
    Communication modules for Unmanned Surface Vehicles.
    This package handles communication protocols and data exchange between 
    different components of the USV system, including sensor data processing, 
    status monitoring, and command transmission.
  </description>
  
  <maintainer email="chenhangwei77777@hotmail.com">Chen Hangwei</maintainer>
  <license>Apache-2.0</license>
  
  <url type="website">https://github.com/chenhangwei/usv_workspace</url>
  <url type="repository">https://github.com/chenhangwei/usv_workspace</url>
  <url type="bugtracker">https://github.com/chenhangwei/usv_workspace/issues</url>
  
  <author email="chenhangwei77777@hotmail.com">Chen Hangwei</author>
  
  <depend>common_utils</depend>
  <depend>px4_msgs</depend>
  <depend>common_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>