<?xml version="1.0"?>
<!--
  Copyright (c) 2026 chenhangwei
  
  This file is part of the USV Workspace project.
  
  ROS 2 package configuration for src.
  
  Author: chenhangwei
  Date: 2026-01-26
-->
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>usv_fan</name>
  <version>0.0.0</version>
  <description>
    Fan control module for Unmanned Surface Vehicles.
    This package provides control interfaces for fan systems used in USV applications, 
    enabling temperature regulation and environmental control for onboard electronics.
  </description>
  
  <maintainer email="chenhangwei77777@hotmail.com">Chen Hangwei</maintainer>
  <license>Apache-2.0</license>
  
  <url type="website">https://github.com/chenhangwei/usv_workspace</url>
  <url type="repository">https://github.com/chenhangwei/usv_workspace</url>
  <url type="bugtracker">https://github.com/chenhangwei/usv_workspace/issues</url>
  
  <author email="chenhangwei77777@hotmail.com">Chen Hangwei</author>
  
  <depend>common_utils</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>