<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>usv_sound</name>
  <version>0.0.0</version>
  <description>该包为USV（无人船）系统提供声音播放与语音提示功能，实现任务状态、警告等信息的音频播报，提升系统交互性和安全性。
This package provides sound playback and voice prompt functions for USV (Unmanned Surface Vehicle) systems, enabling audio broadcasting of task status, warnings, and other information to enhance system interactivity and safety.</description>
  <maintainer email="chenhangwei77777@hotmail.com">chenhangwei</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
