<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>usv_station</name>
  <version>0.1.0</version>
  <description>The usv_station package provides ROS 2 nodes for managing onboard computer programs of Unmanned Surface Vehicles (USVs). It supports control, pose estimation, and status monitoring for a cluster of USVs, enabling formation control and coordination in multi-vehicle scenarios.</description>
  <maintainer email="chenhangwei77777@hotmail.com">chenhangwei</maintainer>
  <license>Apache-2.0</license>

  <depend> px4_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
